# Assignment-Metadata-Extractor

./: .gitignore  README.md  pyproject.toml
Model/: Modelfile
data/: generate_dataset.py
training/: train.ipynb  train.py
