[project]
name = "assignment-metadata-extractor"
version = "0.1.0"
description = "SmolLM2 fine-tuning pipeline for student assignment metadata extraction"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "accelerate>=1.2.1",
  "datasets>=3.2.0",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "llama-cpp-python>=0.3.7",
  "trl>=0.12.2",
  "unsloth>=2025.2.15",
]

[tool.uv]
package = false
